WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188615
Assert that calling CGSSetDenyWindowServerConnections(true) succeeds
https://bugs.webkit.org/show_bug.cgi?id=188615
Summary
Assert that calling CGSSetDenyWindowServerConnections(true) succeeds
Per Arne Vollan
Reported
2018-08-15 13:28:45 PDT
If the call to CGSSetDenyWindowServerConnections(true) fails, it means there are open WindowServer connections at this point, and future WindowServer connections will not be denied. We should assert that this call succeeds.
Attachments
Patch
(1.67 KB, patch)
2018-08-15 13:30 PDT
,
Per Arne Vollan
bfulgham
: review+
bfulgham
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-sierra-wk2
(3.11 MB, application/zip)
2018-08-15 15:41 PDT
,
EWS Watchlist
no flags
Details
Patch
(1.67 KB, patch)
2018-08-15 16:09 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-08-15 13:30:53 PDT
Created
attachment 347203
[details]
Patch
Brent Fulgham
Comment 2
2018-08-15 13:49:58 PDT
Comment on
attachment 347203
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=347203&action=review
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:327 > + ASSERT_UNUSED(retval, retval == kCGErrorSuccess);
Don't we want a RELEASE_ASSERT here? If this returns something besides kCGErrorSuccess, it means we still have an open CGSWindowServer connection, which we do not want!
Per Arne Vollan
Comment 3
2018-08-15 13:56:25 PDT
(In reply to Brent Fulgham from
comment #2
)
> Comment on
attachment 347203
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=347203&action=review
> > > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:327 > > + ASSERT_UNUSED(retval, retval == kCGErrorSuccess); > > Don't we want a RELEASE_ASSERT here? If this returns something besides > kCGErrorSuccess, it means we still have an open CGSWindowServer connection, > which we do not want!
I will change it to RELEASE_ASSERT. Thanks for reviewing!
Brent Fulgham
Comment 4
2018-08-15 15:09:06 PDT
Comment on
attachment 347203
[details]
Patch r=me if this is a RELEASE_ASSERT
EWS Watchlist
Comment 5
2018-08-15 15:41:34 PDT
Comment on
attachment 347203
[details]
Patch
Attachment 347203
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/8872372
New failing tests: css3/filters/backdrop/add-remove-add-backdrop-filter.html
EWS Watchlist
Comment 6
2018-08-15 15:41:35 PDT
Created
attachment 347215
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Per Arne Vollan
Comment 7
2018-08-15 16:09:11 PDT
Created
attachment 347218
[details]
Patch
WebKit Commit Bot
Comment 8
2018-08-16 08:53:38 PDT
Comment on
attachment 347218
[details]
Patch Clearing flags on attachment: 347218 Committed
r234929
: <
https://trac.webkit.org/changeset/234929
>
Radar WebKit Bug Importer
Comment 9
2018-08-17 08:15:44 PDT
<
rdar://problem/43424172
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug