Assert that calling CGSSetDenyWindowServerConnections(true) succeeds https://bugs.webkit.org/show_bug.cgi?id=188615

Reviewed by Brent Fulgham.

If the call to CGSSetDenyWindowServerConnections(true) fails, it means there are open WindowServer connections
at this point, and future WindowServer connections will not be denied. We should assert that this call succeeds.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeProcess):


Canonical link: https://commits.webkit.org/203713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234929 268f45cc-cd09-0410-ab3c-d52691b4dbfc